--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -33,118 +33,143 @@
     animation-timing-function: ease-in;
   }
 
-
-
-nav.menu{  //the nav is placed just inside the 'main' div below the header
+/* Hide scrollbar for Chrome, Safari and Opera */
+  #nav-holder::-webkit-scrollbar {
     display: none;
-    z-index:5000;
-    height:100%;
+  }
+
+
+#nav-holder{
+    /* Hide scrollbar for IE, Edge and Firefox */
+    display:none;
+    //border:5px solid yellow;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
     position: absolute;
+    //pointer-events: none;
+    z-index: 6000;
+    height:1000px;
     width:100%;
     top: $header_height_full;
-    background-color: $secondary;
-    font-family: 'eastmangrotesque-extrabold';
-    height:1200px;
-    text-align: left;
-   
+    overflow-x: hidden;
+    overflow-y: auto;
 
-    ul{
+    
+
+    nav.menu{  //the nav is placed just inside the 'main' div below the header
+        display: none;
+        z-index:5000;
+        height:100%;
         
-        list-style-type: none;
-        text-transform: uppercase;
-        padding-left:0;
-       // border:1px solid red;
+        position: absolute;
+        width:100%;
+        //top: $header_height_full;
+        background-color: $secondary;
+        font-family: 'eastmangrotesque-extrabold';
+        height:1200px;
+        text-align: left;
+        //border:4px solid red;
+    
 
-        li{
-
-            // text-align: center;
-            line-height: 2em;
-            //border-top:1px solid lighten($secondary, 20%);
-            padding:0;
-            //border:1px solid red;
-            //margin-top:.8em;
-            border-top:1px solid rgba(255,255,255,.25);
-            //border:1px solid red;
-
-            &:first-child{
-                //border-top:0;
-                margin-top: 0;;
-            }
-
-            a{
-                font-size: 1.1em;
-                color:white;
-                text-decoration: none;
-                padding: 1em 0;
-                display:block;
-                padding-left:1.2em;
-
-                &:hover{
-                    background-color: lighten($secondary, 8%);
-                }
-
-                &:active{
-                    background-color: darken($secondary, 5%);
-                }
-                
-            }
-
-            a.donate{
-                background-color: #339c44;
+        ul{
             
-                &:hover{
-                    background-color: #40ab51;
+            list-style-type: none;
+            text-transform: uppercase;
+            padding-left:0;
+        // border:1px solid red;
+
+            li{
+
+                // text-align: center;
+                line-height: 2em;
+                //border-top:1px solid lighten($secondary, 20%);
+                padding:0;
+                //border:1px solid red;
+                //margin-top:.8em;
+                border-top:1px solid rgba(255,255,255,.25);
+                //border:1px solid red;
+
+                &:first-child{
+                    //border-top:0;
+                    margin-top: 0;;
                 }
 
-                &:active{
-                    background-color: #268836;
-                }
+                a{
+                    font-size: 1.1em;
+                    color:white;
+                    text-decoration: none;
+                    padding: 1em 0;
+                    display:block;
+                    padding-left:1.2em;
+                    width:100%;
 
-            }
-
-            ul.submenu{
-                li{
-                    line-height: 1.32em;
-                    //border:1px solid red;
-                    margin-top:0;
-                    border:0;
-
-
-                    &:first-child{
-                        margin-top:-.5em;
+                    &:hover{
+                        background-color: lighten($secondary, 8%);
                     }
 
-                    a{
-                        //background-color: darken($secondary, 4%);
-                        padding-left:2.5em;
-                        font-family: $body;
-                        text-transform: capitalize;
+                    &:active{
+                        background-color: darken($secondary, 5%);
                     }
-
                     
                 }
+
+                a.donate{
+                    background-color: #339c44;
+                
+                    &:hover{
+                        background-color: #40ab51;
+                    }
+
+                    &:active{
+                        background-color: #268836;
+                    }
+
+                }
+
+                ul.submenu{
+                    li{
+                        line-height: 1.32em;
+                        //border:1px solid red;
+                        margin-top:0;
+                        border:0;
+
+
+                        &:first-child{
+                            margin-top:-.5em;
+                        }
+
+                        a{
+                            //background-color: darken($secondary, 4%);
+                            padding-left:2.5em;
+                            font-family: $body;
+                            text-transform: capitalize;
+                        }
+
+                        
+                    }
+                }
+            }
+
+        }//end ul
+
+        .social-media-links{
+            
+            //border:4px solid red;
+            text-align: center;
+
+            a{
+
+                img{ 
+                    max-width: 50px;
+                    height:auto;
+                    margin: 1em .75em 0 .75em;
+                }
+            
             }
         }
 
-    }//end ul
-
-    .social-media-links{
-        
-        //border:4px solid red;
-        text-align: center;
-
-        a{
-
-            img{ 
-                max-width: 50px;
-                height:auto;
-                margin: 1em .75em 0 .75em;
-            }
-           
-        }
-    }
-
-}//end nav.menu
+    }//end nav.menu
+}//end #nav-holder
 
 /*----------- BREAKPOINTS ------------ */
 
